--- a/Views/migrantes/Create.cshtml
+++ b/Views/migrantes/Create.cshtml
@@ -70,6 +70,11 @@
                 <span asp-validation-for="Situacionlaboral" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Contrasena" class="control-label"></label>
+                <input asp-for="Contrasena" class="form-control" />
+                <span asp-validation-for="Contrasena" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
