--- a/Views/migrantes/Create.cshtml
+++ b/Views/migrantes/Create.cshtml
@@ -70,6 +70,10 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <div class="form-group">
+                <a class="btn btn-info" asp-action="GoogleSignIn">unirme con ggogle</a>
+            </div>
+
         </form>
     </div>
 </div>
