--- a/Views/Entidads/Delete.cshtml
+++ b/Views/Entidads/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>esta seguro que quiere borrar la entidad?</h3>
 <div>
     <h4>Entidad</h4>
     <hr />
