--- a/Views/FamiliaAmigos/Index.cshtml
+++ b/Views/FamiliaAmigos/Index.cshtml
@@ -49,7 +49,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.TipoAfinidad)
             </th>
-            <th>
+             <th hidden>
                 @Html.DisplayNameFor(model => model.IdMigrantes)
             </th>
             <th></th>
@@ -94,9 +94,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.TipoAfinidad)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdMigrantes)
-            </td>
+            <th hidden>
+                @Html.DisplayNameFor(model => model.IdMigrantes)
+            </th>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
