--- a/Views/Entidads/Index.cshtml
+++ b/Views/Entidads/Index.cshtml
@@ -70,3 +70,6 @@
 }
     </tbody>
 </table>
+<div>
+    <a class="btn btn-success d-block" asp-action="Create" asp-controller="servicios">agregar servicios</a>
+</div>
