--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,9 +44,10 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" >
         <div class="container">
             &copy; 2021 - proyecto - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a asp-area="" asp-controller="calificarapps" asp-action="create">calificarapp</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
