--- a/Views/migrantes/Index.cshtml
+++ b/Views/migrantes/Index.cshtml
@@ -83,16 +83,14 @@
             </table>
         }else
             {
-                <p>no existen paises</p>
+                <p>no existen migrantes</p>
             }
 
     </div>
     
-
-
-
-
-
-
 </div>
+<div class="col-sm-6">
+            <a class="btn btn-success d-block" asp-action="Create" asp-controller="MigranteNecesidads">agregar necesidad</a>
+           
+        </div>
 
