--- a/Views/AsignarEmergenciasMigrantes/Edit.cshtml
+++ b/Views/AsignarEmergenciasMigrantes/Edit.cshtml
@@ -34,6 +34,7 @@
                 <select asp-for="Estado" class="form-control" >
                     <option disabled>Pendiente</option>
                     <option >Aceptado</option>
+                    <option >Finalizado</option>
                 </select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
