--- a/Views/Novedads/Delete.cshtml
+++ b/Views/Novedads/Delete.cshtml
@@ -36,8 +36,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TipoUsuario)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Ciudad)
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ciudad)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Estado)
         </dd>
     </dl>
     
