--- a/Views/Novedads/Details.cshtml
+++ b/Views/Novedads/Details.cshtml
@@ -38,6 +38,9 @@
          <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ciudad)
         </dd>
+         <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Estado)
+        </dd>
     </dl>
 </div>
 <div>
