--- a/Views/Novedads/Edit.cshtml
+++ b/Views/Novedads/Edit.cshtml
@@ -55,6 +55,14 @@
                 <span asp-validation-for="Ciudad" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Estado" class="control-label"></label>
+                <select asp-for="Estado" class="form-control" >
+                 <option disabled>Habilitado</option>
+                 <option>Inhabilitado</option>
+                </select>
+                <span asp-validation-for="TipoUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
