--- a/Views/Novedads/Index.cshtml
+++ b/Views/Novedads/Index.cshtml
@@ -51,6 +51,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Ciudad)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Estado)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -71,6 +74,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ciudad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Estado)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdNovedades">Edit</a> |
