--- a/Views/Novedads/Index2.cshtml
+++ b/Views/Novedads/Index2.cshtml
@@ -27,6 +27,9 @@
              <th>
                 @Html.DisplayNameFor(model => model.Ciudad)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Estado)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ciudad)
+            </td>
+            <td>
+                @Html.DisplayNameFor(model => model.Estado)
             </td>
         </tr>
 }
