--- a/Views/MigranteServicios/Index.cshtml
+++ b/Views/MigranteServicios/Index.cshtml
@@ -33,8 +33,8 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
+            <tr>
+                <td>
                 @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
@@ -44,10 +44,10 @@
                 @Html.DisplayFor(modelItem => item.EstadoServicios)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Migrantes.Apellidos)
+                @Html.DisplayFor(modelItem => item.Migrantes.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Servicios.Estado)
+                @Html.DisplayFor(modelItem => item.Servicios.NombreServicio)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdMigranteServicio">Edit</a> |
