--- a/Views/SuplirNecesidads/Create.cshtml
+++ b/Views/SuplirNecesidads/Create.cshtml
@@ -43,6 +43,14 @@
                 <label asp-for="IdMigranteNecesidad" class="control-label"></label>
                 <select asp-for="IdMigranteNecesidad" class ="form-control" asp-items="ViewBag.IdMigranteNecesidad"></select>
             </div>
+              <div class="form-group">
+                <label asp-for="TipoDeUsuario" class="control-label"></label>
+                <select asp-for="TipoDeUsuario" class="form-control" >
+                    <option >Migrante</option>
+                    <option >Admin</option>
+                </select>
+                <span asp-validation-for="TipoDeUsuario" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
